Changelog for modDevTools.

modDevTools 1.0.0-pl
==============
Список ресурсов на странице редактирования сниппета, содержащих вывод данного сниппета // Resource list on Snippet update page
Список ресурсов на странице редактирования чанка, содержащих вывод данного чанка // Resource list on Chunk update page
Исправление ошибки c Ctrl-z

modDevTools 0.9.8-rc2
==============
- Панель поиска и замены строк в элементах / Search and Replace panel for elements
- Панель "Хлебные крошки" на странице редактирования ресурсов / BreadCrumbs panel for resource edit page
- Исправление ошибки в логах при установке / Fix log messages while install

modDevTools 0.9.5-rc1
==============
- Список шаблонов на странице редактирования чанка / Template list on chunk page;
- Подсветка имени чанка в коде шаблона из этого списка для редактора Ace / Name of the chunk is highlighted in template code for Ace;
- Сохранение дочерних элементов в фокусе вместо родительских / Save child element in focus instead of parent;

modDevTools 0.9.0-beta
==============
- Initial release.